tests/errors/macro/macro_semicolon_in_macros_name.c
#define name;	// ;: не требуется в макроопределении

int main()
{
	return 0;
}
